# Prog2Beleg

./: CMakeLists.txt  Medium.h  main.cpp  main_window.qml  menu.cpp  menu.h
Prog2BelegMedienverwaltung/: Book.cpp  Book.h  DVD.cpp  DVD.h  Media.cpp  Media.h  MediaPersonDB.cpp  MediaPersonDB.h  Person.cpp  Person.h  Prog2BelegMedienverwaltung.1  Task.txt  list.h  main.cpp  misc.h  string.h
Prog2BelegMedienverwaltung.xcodeproj/: project.pbxproj
Prog2BelegMedienverwaltung.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Prog2BelegMedienverwaltung.xcodeproj/xcuserdata/markus.xcuserdatad/xcschemes/: Prog2BelegMedienverwaltung.xcscheme  xcschememanagement.plist
res/: main_window.qml
src/: Medium.cpp  book.cpp  book.h  dvd.cpp  dvd.h  library.cpp  library.h  library_file.h  library_qt_adapters.cpp  library_qt_adapters.h  main.cpp  medium.cpp  medium.h  person.cpp  person.h
test/: core_logic_tests.cpp
